--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="Images/Me_circled.jpeg" alt="Nalin's Profile picture" width="175" height="175">
+                <img src="Images/Me_circled.png" alt="Nalin's Profile picture" width="175" height="175">
             </td>
             <td>
                 <h1>Nalin Chourasia</h1>
