--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Nalin Chourasia started with his first webpage
      on 13th April 2021!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Page</title>
+    <title>Nalin's Personal Page</title>
 </head>
 <body>
     <table cellspacing="20">
